--- a/modulos/modulo_mapa.tex
+++ b/modulos/modulo_mapa.tex
@@ -299,7 +299,7 @@ Usaremos $lat_{max}$ y $long_{max}$ para denotar las máximas dimensiones entre 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\Pre{\texttt{true}} 
-		\Post{TODO} 
+		\Post{$res$ es una posición no existente} 
 		\BlankLine
 		\caption{\algoritmo{CrearDataPos}{}{dataPos}}
 		res.existe $\leftarrow$ false\OdeLinea{1}
