--- a/resolucion.tex
+++ b/resolucion.tex
@@ -45,6 +45,9 @@
 \input{modulos/modulo_coordenada}
 
 \pagebreak
+\input{modulos/modulo_conjJugs}
+
+\pagebreak
 \input{modulos/modulo_diccString}
 
 \pagebreak
