--- a/modulos/modulo_juego.tex
+++ b/modulos/modulo_juego.tex
@@ -1,6 +1,5 @@
 \section{Módulo Juego}
 
-
 La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando los nombres como claves. Sus posiciones se guardan en un Conjunto Lineal con inserción rápida, y en el mismo mapa se guarda el pokémon que se ubica en dicha posición (este valor se invalida si la posición no está en el conjunto, como cuando se captura el pokémon).
 
 Utilizaremos la misma notación para complejidades que en el enunciado:
@@ -392,7 +391,7 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 
 		j.grillaPos[Latitud(c)][Longitud(c)].pokemon $\leftarrow$ pk\OdeLinea{1}
 		j.grillaPos[Latitud(c)][Longitud(c)].contadorCaptura $\leftarrow$ 0\OdeLinea{1}
-		%TODO BORRAR LA COLA DE PRIORIDAD
+		\tcc{Se desestima la complejidad de borrar el diccionario de prioridad anterior}
 		j.grillaPos[Latitud(c)][Longitud(c)].jugEsperandoCaptura $\leftarrow$ Vacio()\OdeLinea{1}
 
 		conj(coor) : coorEnRango $\leftarrow$ PosicionesEnRango(j, c, 2)\OdeLinea{1}
@@ -515,8 +514,6 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 				\If{DistEuclidea(posAnterior, coorConPk) $>$ 4}{
 					\tcc{Si el jugador entró a una nueva área de captura, reiniciar el contador}
 					j.grillaPos[Latitud(coorConPk)][Longitud(coorConPk)].contadorCaptura $\leftarrow$ 0\OdeLinea{1}
-					Definir(j.grillaPos[Latitud(coorConPk)][Longitud(coorConPk)].jugEsperandoCaptura, e, (*j.jugadores[e]).cantPokemons)\OdeLinea{log(EC)}
-					%TODO agregar jugsEnPos (Y REVISAR LOS DEMAS PROBLEMAS DONDE FALTA)
 				}
 				Avanzar(it)\OdeLinea{1}
 			}
