--- a/modulos/modulo_juego.tex
+++ b/modulos/modulo_juego.tex
@@ -389,6 +389,7 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 			Definir(j.pokemons, pk, 1)\OdeLinea{|pk|}
 		}
 
+		j.grillaPos[Latitud(c)][Longitud(c)].hayPokemon $\leftarrow$ true\OdeLinea{1}
 		j.grillaPos[Latitud(c)][Longitud(c)].pokemon $\leftarrow$ pk\OdeLinea{1}
 		j.grillaPos[Latitud(c)][Longitud(c)].contadorCaptura $\leftarrow$ 0\OdeLinea{1}
 		\tcc{Se desestima la complejidad de borrar el diccionario de prioridad anterior}
