git blame carlos

--- a/modulos/modulo_conjJugs.tex
+++ b/modulos/modulo_conjJugs.tex
@@ -61,7 +61,7 @@ Usaremos $\#j$ para denotar la cantidad de entradas del diccionario.
 		
 		\item No hay jugadores repetidos
 
-		\item Un nodo cualquiera del arbol de jugadores su hijo izquierdo tiene menor id y su hijo derecho tiene mayor id
+		\item Para cualquier nodo del arbol de jugadores, su hijo izquierdo tiene un id menor que él y su hijo derecho uno mayor
 
 		\item La altura de un Nodo es la altura del hijo con mayor altura mas 1
 
