--- a/modulos/modulo_diccString.tex
+++ b/modulos/modulo_diccString.tex
@@ -144,7 +144,7 @@ Usaremos $copy(s)$ para denotar el costo de copiar el elemento $s \in \alpha$. L
 
 		\item La raíz del trie es un nodo válido no nulo que no guarda valor
 
-		\item Los punteros son únicos (se referencian desde un único punto del trie)
+		\item Los punteros son únicos (se referencian desde un único punto del trie)\footnote{No pudimos expresar esto en rep, lo dejamos en castellano}
 
 	\end{enumerate}
 
